--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ header h1 {
     }
 }
 
-@media (max-width: 438px) {
+@media (max-width: 496px) {
     .desafio h3 {
         font-size: 15px;
     }
@@ -163,6 +163,19 @@ header h1 {
     }
     .btnuno {
         margin: 1px;
+    }
+    .btndos {
+        height: 35px;
+        width: 35px;
+        font-size: 4px;
+    }
+}
+
+@media (max-width: 410px) {
+    .btncuatro {
+        height: 35px;
+        width: 60px;
+        font-size: 8px;
     }
 }
 
@@ -175,12 +188,34 @@ header h1 {
     }
 }
 
-@media (max-width: 338px) {
+@media (max-width: 386px) {
+    .btncuatro {
+        height: 30px;
+        width: 40px;
+        font-size: 6px;
+    }
+}
+
+@media (max-width: 362px) {
+    header h1 {
+        font-size: 12px;
+    }
+
+    .escoger h2 {
+        font-size: 10px;
+    }
+
+    .boton {
+        height: 15px;
+        width: 15px;
+        font-size: 3px;
+    }
+
     .desafio h3 {
         font-size: 10px;
     }
     .btnuno {
-        width: 20px;
+        width: 25px;
         height: 20px;
         font-size: 5px;
         margin: 0px;
